# pre-commit-hooks

./:  .pre-commit-hooks.yaml  .gitignore  README.md  setup.cfg
pre_commit_hooks/: parse_obsidian_links.py
