[metadata]
name = pre_commit_hooks
description = A collection of useful hooks for pre-commit.
version = 0.1.0
author = Lukas Krimphove
author_email = lukas.krimphove@gmx.de
license = MIT
url = https://krimphove.site

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    parse-obsidian-links = pre_commit_hooks.parse_obsidian_links:main
